# money-split

./: .gitignore  .pre-commit-config.yaml  Makefile  Plan.md  README.md  pyproject.toml  ty.toml
src/: __init__.py  app.py
tests/: __init__.py  test_app.py
